assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Montserrat+Alternates:wght@500&display=swap');

/* https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
:root {
    /* colour scheme: https://material.io/resources/color/#!/?view.left=0&view.right=0&primary.color=1DE9B6&secondary.color=F9FBE7 */
    --primary: #1de9b6;
    --primary-light: #6effe8;
    --primary-dark: #00b686;
    --secondary: #f9fbe7;
    --secondary-r: 249;
    --secondary-g: 251;
    --secondary-b: 231;
    --secondary-light: #ffffff;
    --secondary-dark: #c6c8b5;
    --primary-text: #000000;
    --secondary-text: #000000;

    --heading-font: 'Montserrat', sans-serif;
    --heading-font_weight: 500;
    --paragraph-font: 'Hind', sans-serif;
    --paragraph-font_weight: 300;

    --std-margin-horz: 7.5%;
    --std-margin-vert: 5px;

    --std-spacing: 30px;
    --std-padding-horz: 15px;
    --std-padding-vert: 5px;

    --margin-padding-horz: calc(var(--std-margin-horz) + var(--std-padding-horz));
    --content-width: calc(100% - var(--margin-padding-horz) - var(--margin-padding-horz));
    --content-half-width: calc(var(--content-width) / 2);

    --menu-item-width: 80px;
    --menu-height: 32px;        /* 2 * std 16px */

    --footer-height: 50px;

    --nav-menu-margin-right: 20px;

    --std-block-size: 200px;

    /* one line hero text */
    --hero-text-width: 500px;
    --hero-text-height: 50px;
    --hero-height: var(--std-block-size);
}

/* CSS Specificity
    https://developer.mozilla.org/en-US/docs/Web/CSS/Specificity
    https://specifishity.com/
*/

/* -vv- Love Running Walkthrough Project -vv- */
* {
    margin: 0;
    padding: 0;
    border: none;
}
/* -^^- Love Running Walkthrough Project -^^-*/

h1, h2, h3, h4, h5, h6 {
    font-family: var(--heading-font);
    font-weight: var(--heading-font_weight);
    color: var(--primary-text);
    clear: left;
}

body {
    font-family: var(--paragraph-font);
    font-weight: var(--paragraph-font_weight);
    color: var(--secondary-text);
    background-color: var(--secondary);
}

section {
    padding: var(--std-padding-vert) var(--std-padding-horz);
    margin: var(--std-margin-vert) var(--std-margin-horz);
}

/* classes to align with section content */
.section-left {
    padding-left: var(--std-padding-horz);
    margin-left: var(--std-margin-horz);
}
.section-right {
    padding-right: var(--std-padding-horz);
    margin-right: var(--std-margin-horz);
}
.section-centre {
    text-align: center;
}

/* navigation links */
/* https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
nav {
    width: 100%;
}

.nav_menu {
    padding: var(--std-padding-vert) var(--std-padding-horz) var(--std-padding-vert) var(--std-padding-horz);
    line-height: var(--menu-height);
    margin-top: var(--std-margin-vert);
    margin-bottom: var(--std-margin-vert);
    margin-left: var(--std-margin-horz);
    margin-right: var(--std-margin-horz);
    height: calc(var(--std-padding-vert) + var(--menu-height) + var(--std-padding-vert));
}

.nav_menu li {
    float: left;
    list-style-type: none;
    background-color: var(--secondary);
    text-align: center;
}

.nav_menu a {
    text-decoration: none;
    color: inherit;

    margin-right: var(--nav-menu-margin-right);
    margin-top: var(--std-margin-vert);
    margin-bottom: var(--std-margin-vert);
    border: 1px solid var(--primary-light);
    border-radius: 5px;
    background-color: var(--primary-light);
    padding: var(--std-padding-vert) var(--std-padding-horz) var(--std-padding-vert) var(--std-padding-horz);
    width: var(--menu-item-width);
}

.nav_menu li.nav-menu-li-margin-right {
    margin-right: 0;
}

.nav_menu a.current_page {
    border-color: var(--primary);
    background-color: var(--primary);
}

.nav_menu a:hover {
    border-color: var(--primary-dark);
    background-color: var(--primary-dark);
}

/* hero image */
#hero-outer {
    height: var(--hero-height);
    width: var(--content-width);
    overflow: hidden;

    position: relative;
}

#hero-text, #hero-text h2 {
    color: var(--secondary-text);
    line-height: var(--hero-text-height);
}

#hero-image {
    height: var(--hero-height);
    width: 100%;

    border-radius: 10px;

    background: url('../img/mas-arg-boys-2018-youth-olympics-lge.jpg') no-repeat center center;

    /* animation rotation effect when page loaded */
    animation-name: hero-animate;
    animation-duration: 4s;
    animation-fill-mode: forwards;
}

/* rotation for the hero image
    https://developer.mozilla.org/en-US/docs/Web/CSS/transform-function */
@keyframes hero-animate {
    from {
        transform: rotateY(270deg);
    }
    to {
        transform: rotateY(360deg);
    }
}
/* fade in for the hero image */
@keyframes hero-fade-in {
    0% { 
        opacity: 0.5;
    }
    100% {
        opacity: 1; 
    }
}
    
#hero-text {
    font-size: 150%;
    text-align: center;

    width: var(--hero-text-width);
    height: var(--hero-text-height);
    border-radius: 10px;

    background-color: rgba(var(--secondary-r), var(--secondary-g), var(--secondary-b), .7);

    position: relative;
    
    --no-text-height: calc(var(--hero-height) - var(--hero-text-height));
    --no-text-width: calc(100% - var(--hero-text-width));
    top: calc(var(--no-text-height) / 2); 
    left: calc(var(--no-text-width) / 2);
}

#one-line-hero {
    display: block;
}
#two-line-hero {
    display: none;
}

/* footer */

footer {
    width: var(--content-width);
    margin-left: var(--std-margin-horz);
    margin-right: var(--std-margin-horz);
    padding: var(--std-padding-vert) var(--std-padding-horz) var(--std-padding-vert) var(--std-padding-horz);
    height: var(--footer-height);
    color: var(--secondary-dark);
}

.copyright {
    float: left;
    width: 47.5%;
}

.built-with {
    float: left;
    width: 5%;
}

.socials {
    float: right;
    width: 47.5%;
}

.socials-list {
    list-style: none;
    display: flex;
    justify-content: flex-end;
}

.socials-list li {
    --li-margin: calc(var(--std-spacing) - 20px);
    display: inline;
    margin-left: var(--li-margin);
    margin-left: var(--li-margin);
}

.socials-list a {
    text-decoration: none;
    color: var(--secondary-dark);
}

.built-with a {
    text-decoration: none;
    color: var(--secondary-dark);
}

/* media queries */

/* larger to medium screens, 1200px wide or less */ 
@media screen and (max-width: 1200px) {

    :root {
        --std-margin-horz: 5%;
    }
}

/* medium screens, 950px wide or less */ 
@media screen and (max-width: 950px) {

    :root {
        --std-margin-horz: 2.5%;
    }
}

/* small-medium screens, 800px wide or less */ 
@media screen and (max-width: 800px) {

    :root {
        --std-margin-horz: 1.5%;
    }
}

/* tiny screens, 450px wide or less */ 
@media screen and (max-width: 450px) {

    :root {
        --std-margin-horz: 0.5%;

        /* two line hero text */
        --hero-text-width: 250px;
        --hero-text-height: 100px;
    }

    /* navigation links */
    .nav_menu {
        --height: calc(var(--std-padding-vert) + var(--menu-height) + var(--std-padding-vert) + var(--std-margin-vert));
        height: calc(var(--height) * 3);
    }
    .nav_menu li {
        clear: both;
        float: right;
    }    
    .nav_menu li.nav-menu-li-margin-right {
        margin-right: var(--nav-menu-margin-right);
    }
        
    /* footer */
    .copyright {
        float: left;
        text-align: left;
        width: calc(var(--content-width) * 0.8);
    }
    .built-with {
        float: right;
        text-align: right;
        width: calc(var(--content-width) * 0.2);
    }
    .socials {
        float: left;
        text-align: center;
        width: var(--content-width);
    }
    .socials-list {
        justify-content: center;
    }

    /* hero */
    #hero-text, #hero-text h2 {
        line-height: calc(var(--hero-text-height) / 2);
    }
    #one-line-hero {
        display: none;
    }
    #two-line-hero {
        display: block;
    }
}

/* https://developer.mozilla.org/en-US/docs/Web/CSS/@media/prefers-reduced-motion */
/* Tone down the animation to avoid vestibular motion triggers like scaling or panning large objects. */
@media (prefers-reduced-motion) {
    #hero-image {
      animation-name: hero-fade-in;
    }
  }

